--- a/style.css
+++ b/style.css
@@ -173,4 +173,31 @@ body {
 .image img{
     
     width: 100%;
-  }
+  /* 2nd card section */
+  .cardSection2 .card-section{
+    margin-top: 50px;
+    display: flex; 
+    gap: 20px;
+    padding-left: 30px;
+    margin-bottom: 100px;
+}
+.cardSection2 h3{
+    text-transform: uppercase;
+    margin-left: 60px;
+    font-size: 30px;
+}
+.cardSection2 .card-section .card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+.cardSection2 .card-section .card  img{
+        height: 400px;
+        width: 100%;
+        border-radius: 20px;
+    }
+.cardSection2 .card-section .card  a{
+    color: #000;
+    padding-left: 20px;
+}
