--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ body {
  }
 .image img{
     
-    width: 100%;
+    width: 100%;}
   /* 2nd card section */
   .cardSection2 .card-section{
     margin-top: 50px;
@@ -200,4 +200,44 @@ body {
 .cardSection2 .card-section .card  a{
     color: #000;
     padding-left: 20px;
+}
+/* 1st shoes section */
+.shoes .category {
+    display: flex;
+    margin-left: 50px;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+.shoes .category a{
+    padding: 8px 15px;
+    border: 1px solid black;
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+
+}
+#black{
+    padding: 8px 15px;
+    border: 1px solid black;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: #000;
+}
+#black:hover{
+    background-color: transparent;
+    color: black;
+}
+.shoes .category a:hover{
+    background-color: #000;
+    color: white;
+}
+.shoes .shoes-card .shoes-option{
+    display: flex;
+    flex-direction: column;
+}
+.shoes .shoes-card{
+    display: flex;
+    margin-bottom: 30px;
+
 }
