--- a/style.css
+++ b/style.css
@@ -241,3 +241,90 @@ body {
     margin-bottom: 30px;
 
 }
+/* 3rd image section */
+.third-image{
+background-image: url("img/3rd image.png");
+    height: 600px;
+    width: 100%;
+     background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    margin-top: 50px;
+    margin-bottom: 70px;
+    
+}
+.third-image .btn{
+ padding-top: 515px;
+ padding-left: 40px;
+}
+.third-image .btn a{
+    background-color: #000;
+    color: white;
+    padding: 20px 40px;
+    text-decoration: none;
+}
+.third-image .btn a:hover{
+    color: rgb(241, 227, 200);
+}
+/* popular section */
+.popular h3{
+    margin-left: 50px;
+    font-size: 20px;
+}
+.popular .categories{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.popular .categories h4{
+    border-bottom: 1px solid black;
+    margin-left: 40px;
+    width: 140px;
+    font-size: larger;
+    padding-bottom: 10px;
+}
+.popular .categories h4:hover{
+    border-bottom: 5px solid black;
+}
+.popular .shoes-card{
+      display: flex;
+    margin-bottom: 30px;
+}
+.popular .shoes-card .card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.popular .shoes-card .card p{
+    padding-left: 20px;
+}
+.popular .category{
+    margin: 50px;
+    display: flex;
+    gap: 40px;
+}
+.popular .category a{
+     padding: 8px 15px;
+    border: 1px solid black;
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: transparent;
+}
+.popular .category a:hover{
+    background-color: #000;
+    color: white;
+}
+#bg-black{
+     padding: 8px 15px;
+    border: 1px solid black;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: #000;
+}
+#bg-black:hover{
+    background-color: #fff;
+    color: black;
+}
+
